--- a/product.html
+++ b/product.html
@@ -12,10 +12,132 @@
       crossorigin="anonymous"
     />
 
-   <link rel="stylesheet" href="./assets/css/product/product.css">
+    <link rel="stylesheet" href="./assets/css/product/product.css" />
   </head>
   <body>
     <header>
+      <section id="top-area">
+        <div class="my-container">
+          <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex">
+              <div class="language">
+                <div class="dropdown">
+                  <button
+                    class="btn btn-secondary dropdown-toggle button1"
+                    type="button"
+                    id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    English
+                  </button>
+                  <ul
+                    class="dropdown-menu"
+                    aria-labelledby="dropdownMenuButton1"
+                  >
+                    <li><a class="dropdown-item" href="#">English</a></li>
+                    <li><a class="dropdown-item" href="#">French</a></li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="country">
+                <div class="dropdown">
+                  <button
+                    class="btn btn-secondary dropdown-toggle button2"
+                    type="button"
+                    id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    USD
+                  </button>
+                  <ul
+                    class="dropdown-menu"
+                    aria-labelledby="dropdownMenuButton1"
+                  >
+                    <li>
+                      <a class="dropdown-item" href=""
+                        ><img src="./assets/images/home/Flag-India.jpg" /><span
+                          >INR</span
+                        ></a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href=""
+                        ><img
+                          src="./assets/images/home/220px-Flag_of_the_United_States.svg.png"
+                        /><span>USD</span></a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href=""
+                        ><img
+                          src="./assets/images/home/Flag_of_New_Zealand.svg.png"
+                        /><span>NZD</span></a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href=""
+                        ><img
+                          src="./assets/images/home/Flag_of_Germany.svg.png"
+                        /><span>GMD</span></a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href=""
+                        ><img
+                          src="./assets/images/home/1200px-Flag_of_Israel.svg.png"
+                        /><span>ILR</span></a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href=""
+                        ><img
+                          src="./assets/images/home/Flag_of_France.svg.png"
+                        /><span>EUR</span></a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="top-area-logo">
+                <a href="./home.html">
+                  <img src="./assets/images/about/download.png" alt="logo"
+                /></a>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="icons">
+                <div class="basket">
+                  <div class="basket-bg">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                  </div>
+                  <div class="basket-circles"><sup>0</sup></div>
+                </div>
+
+                <div class="heart">
+                  <div class="favori-bg">
+                    <i class="fa-solid fa-heart"></i>
+                  </div>
+                  <div class="heart-circles"><sup>0</sup></div>
+                </div>
+
+                <div class="profile-img">
+                  <a href="./profile.html"
+                    ><img src="./assets/images/home/avatar.jfif" alt="profile"
+                  /></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section id="nav-area">
         <div class="my-container">
           <div class="col-12">
@@ -25,7 +147,7 @@
               </div>
               <ul class="navbar-list">
                 <li>
-                  <a class="hov" href="#">HOME</a>
+                  <a class="hov" href="./home.html">HOME</a>
                   <ul class="submenu home">
                     <li><a href="#">HOME ONE</a></li>
                     <li><a href="#">HOME TWO</a></li>
@@ -35,13 +157,15 @@
                 <li>
                   <a class="hov" href="#">SHOP</a>
                   <ul class="submenu shop">
-                    <li><a href="#">PRODUCT DETAIL</a></li>
+                    <li><a href="./product.html">PRODUCT DETAIL</a></li>
                     <li><a href="#">CART</a></li>
                     <li><a href="#">CHECKOUT</a></li>
                     <li><a href="#">PAYMENT</a></li>
                   </ul>
                 </li>
-                <li><a class="hov" href="#">ACCESSORIES</a></li>
+                <li>
+                  <a class="hov" href="./accessories.html">ACCESSORIES</a>
+                </li>
                 <li>
                   <a class="hov" href="#">CATEGORIES</a>
                   <ul class="submenu categories">
@@ -77,7 +201,7 @@
                     </div>
                   </ul>
                 </li>
-                <li><a class="hov" href="#">ABOUT US</a></li>
+                <li><a class="hov" href="./about.html">ABOUT US</a></li>
                 <li><a class="hov" href="#">CONTACT US</a></li>
                 <li><a class="hov admin" href="#">ADMIN PANEL</a></li>
               </ul>
@@ -85,14 +209,8 @@
           </div>
         </div>
       </section>
-
-      <section id="cover">
-        <div class="back-img">
-          <h1 class="mb-4">Product Details</h1>
-          <h4 style="color: white">Creative Team and Wide Goals</h4>
-        </div>
-      </section>
     </header>
+
     <main>
       <section id="product-info">
         <div class="container-fluid">
@@ -264,7 +382,10 @@
             <div class="col-lg-3 col-md-6 col-sm-12">
               <div class="product-card">
                 <div class="img">
-                  <img src="./assets/images/product/6-item-a.1459ebf4.jpg" alt="" />
+                  <img
+                    src="./assets/images/product/6-item-a.1459ebf4.jpg"
+                    alt=""
+                  />
 
                   <div class="price">$15.75</div>
                 </div>
@@ -295,7 +416,10 @@
             <div class="col-lg-3 col-md-6 col-sm-12">
               <div class="product-card">
                 <div class="img">
-                  <img src="./assets/images/product/7-item-a.674dc964.jpg" alt="" />
+                  <img
+                    src="./assets/images/product/7-item-a.674dc964.jpg"
+                    alt=""
+                  />
 
                   <div class="price">$15.75</div>
                 </div>
@@ -326,7 +450,10 @@
             <div class="col-lg-3 col-md-6 col-sm-12">
               <div class="product-card">
                 <div class="img">
-                  <img src="./assets/images/product/7-item-a.674dc964.jpg" alt="" />
+                  <img
+                    src="./assets/images/product/7-item-a.674dc964.jpg"
+                    alt=""
+                  />
 
                   <div class="price">$15.75</div>
                 </div>
@@ -357,7 +484,10 @@
             <div class="col-lg-3 col-md-6 col-sm-12">
               <div class="product-card">
                 <div class="img">
-                  <img src="./assets/images/product/8-item-a.b9a10876.jpg" alt="" />
+                  <img
+                    src="./assets/images/product/8-item-a.b9a10876.jpg"
+                    alt=""
+                  />
 
                   <div class="price">$15.75</div>
                 </div>
@@ -478,24 +608,24 @@
       </section>
     </footer>
 
-
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
       integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+
     <script
       src="https://kit.fontawesome.com/0622708fc2.js"
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="./assets/js/product/product.js"></script>
   </body>
 </html>
